force-app/main/default/objects/cgcloud__Payment_Template__c/cgcloud__Payment_Template__c.object-meta.xml
<CustomObject>
    <description>Holds details of payment template to be used for payments</description>
    <label>Claim Template</label>
    <nameField>
        <label>Claim Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>