force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Accrual_Claim_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Claim_Measure_Code__c</fullName>
    <description>Write back measure code of the payment tactic payout KPI used to identify the relevant payment tactic KPI.</description>
    <formula>SUBSTITUTE(cgcloud__Tactic_Payout_KPI_Definition__r.cgcloud__Storage_Options_Measure_Code__c, &apos;#&apos;, &apos;C&apos;)</formula>
    <label>Accrual Claim Measure Code</label>
    <type>Text</type>
</CustomField>