force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Additional_PTP_Kpi_Definition_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_PTP_Kpi_Definition_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Editable lookup to KPI_Definition</description>
    <inlineHelpText>Defines the KPI used to write back into the claim tactic product at the Additional KPI Value 1 attribute.</inlineHelpText>
    <label>Additional PTP KPI Definition 1</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Payment Templates (Additional PTP Kpi Definition 1)</relationshipLabel>
    <relationshipName>Payment_Template_KPI_Definition1</relationshipName>
    <type>Lookup</type>
</CustomField>