force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Additional_PTP_Kpi_Definition_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_PTP_Kpi_Definition_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Editable lookup to KPI_Definition</description>
    <inlineHelpText>Defines the KPI used to write back into the claim tactic product at the Additional KPI Value 3 attribute.</inlineHelpText>
    <label>Additional PTP KPI Definition 3</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Payment Templates (Additional PTP Kpi Definition 3)</relationshipLabel>
    <relationshipName>Payment_Templates_Kpi_Definition3</relationshipName>
    <type>Lookup</type>
</CustomField>