force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Currency__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>