force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Date_Thru_Offset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Defines the offset used to calculate &apos;To&apos; filter in Link Tactics.</inlineHelpText>
    <label>Date Thru Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>