force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Is_Accruals_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Accruals_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables accruals for claims linked to this claim template.</description>
    <inlineHelpText>You can&apos;t disable accruals after you&apos;ve enabled it.</inlineHelpText>
    <label>Enable Accruals</label>
    <type>Checkbox</type>
</CustomField>