force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>KPI Set associated with the payment template</description>
    <label>KPI Set</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__KPI_Set__c.cgcloud__Usage__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Set__c</referenceTo>
    <relationshipLabel>Payment Templates</relationshipLabel>
    <relationshipName>Payment_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>