force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Payment_Adjustment_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Adjustment_Process_Type__c</fullName>
    <defaultValue>&quot;Interfaced&quot;</defaultValue>
    <description>Defines the payment adjustment process type of the payment template.</description>
    <label>Claim Adjustment Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Interfaced</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>