force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Payment_Tactic_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Tactic_Product_Level__c</fullName>
    <description>Defines the product level of the payment tactic at which the calculation is performed.</description>
    <inlineHelpText>Defines the product level of the claim tactic at which the calculation is performed.</inlineHelpText>
    <label>Claim Tactic Product Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Product_Level</valueSetName>
    </valueSet>
</CustomField>