force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Type__c</fullName>
    <label>Claim Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Invoice-Based</fullName>
            </value>
            <value>
                <fullName>Check Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>