force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Payment_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Type_Formula__c</fullName>
    <formula>TEXT( cgcloud__Payment_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Type</label>
    <type>Text</type>
</CustomField>