force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Requires_Funds__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Requires_Funds__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines if the claim requires funds to be approved.</inlineHelpText>
    <label>Requires Funds</label>
    <type>Checkbox</type>
</CustomField>