force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>cgcloud__Sales_Organization__c</referenceTo>
    <relationshipLabel>Payment Templates (Sales Org)</relationshipLabel>
    <relationshipName>Payment_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>