force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Short_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Code__c</fullName>
    <externalId>true</externalId>
    <label>Short Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>