force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <label>Sort</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>