force-app/main/default/objects/cgcloud__Payment_Template__c/fields/cgcloud__Tactic_Payout_KPI_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Payout_KPI_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field dictates which field of the Payment Tactic Grid that the Tactic Payout amount will be automatically allocated to upon loading</description>
    <inlineHelpText>Defines the KPI used to distribute the Tactic Payout.</inlineHelpText>
    <label>Tactic Payout KPI Definition</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Payment Templates</relationshipLabel>
    <relationshipName>Payment_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>