force-app/main/default/objects/cgcloud__Payment_Template__c/validationRules/cgcloud__Alphanumeric_only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Alphanumeric_only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
  NOT(REGEX(cgcloud__Short_Code__c , &quot;[a-zA-Z0-9_+-]+&quot;))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Short_Code__c</errorDisplayField>
    <errorMessage>Short codes cannot contain special characters.</errorMessage>
</ValidationRule>