force-app/main/default/objects/cgcloud__Payment_Template__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Payment_Type__c</columns>
    <columns>cgcloud__Short_Code__c</columns>
    <columns>cgcloud__Sort__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>